--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>Useful Links</h2>
     <a href="https://www.w3schools.com">Learn at W3Schools</a><br>
     <a href="basichtml2.html">HTML2</a><br>
-    <a href="aboutme.html">About Me</a><br>
+    <a href="pages/aboutme.html">About Me</a><br>
     <a href="Form.html">Job Application</a><br>
     
     <br><br>
